---------------------------------------------------------------------------------------------------
Version: 1.1.6
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2021-03-22
  Bugfixes:
    - Fixed that nuclear reactor working lights were not properly overridden
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2021-03-13
  Locale:
    - Fixed an inconsistency with colons and Default coloring
    - Added Chinese Traditional and Korean localizations, updated German localization
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2021-03-04
  Features:
    - Moved handling for transport belts, splitters, and underground belts into this mod
    - Added startup settings "Reskin entities", "Reskin equipment", "Reskin items and fluids" and "Reskin technologies" to control the scope of the various mod reskin toggles; by default the complete scope is enabled
    - Added function `check_scope` to check the enabled scope and the given toggle setting and return the appropriate boolean or nil
    - Added control logic to check for missing Artisanal Reskins mods and notify players once per save
    - Added a setting "Display notifications" under Player settings to control whether update notifications display
  Changes:
    - Revised tint handling, separated transport belt tints into their own table, `reskins.lib.belt_tint_index`
    - Revised how tints are indexed, allowing for direct reference by tier-number instead of a string
    - Revised transport belt mask sprites to improve mask precision and color
    - Consolidated settings-stage functions into `reskins.lib` global function host
    - Internal code revisions such that reskinning is trigger-based