@@ -1,7 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.6
 Date: ????
+  Features:
+    - Added function `create_icon_variations`
   Changes:
+    - Removed function `ore_icon_variations`
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.5
 Date: 2021-03-22
